--- a/Back/package.json
+++ b/Back/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "graphql": "^16.8.1"
   }
 }
